...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageShopItem1"
        android:layout_width="145dp"
        android:layout_height="128dp"
        android:contentDescription="@string/image_shop_item_1"
        android:src="@drawable/waterdrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShopItem1"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="buyWaterUpgrade"/>

    <ImageView
        android:id="@+id/imageShopItem3"
        android:layout_width="104dp"
        android:layout_height="125dp"
        android:src="@drawable/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/imageShopItem2"
        app:layout_constraintTop_toBottomOf="@+id/textShopItem3"
        app:layout_constraintVertical_bias="0.07999998"
        android:onClick="buyRunningUpgrade"/>

    <ImageView
        android:id="@+id/imageShopItem2"
...
