<resources>
    <string name="app_name">FitPot</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_inventory">Inventory</string>
    <string name="circle">Circle With Text</string>
    <string name="plant1">Plant\'s 1st stage</string>
    <string name="plant2">Plant\'s 2st stage</string>
    <string name="plant3">Plant\'s 3st stage</string>
    <string name="plant4">Plant\'s 4st stage</string>
    <string name="plant5">Plant\'s 5st stage</string>
    <string name="shop_item_1">Increase capacity</string>
    <string name="shop_item_2">Buy new plant</string>
    <string name="shop_item_3">Water drops multiplier</string>
    <string name="water_drops">Water drops</string>
    <string name="image_shop_item_1">Accumulate more water</string>
    <string name="purchase_1">You can accumulate more water</string>
    <string name="purchase_2">Plant can live a little longer</string>
    <string name="purchase_3">Running??</string>
    <string name="no_money">Not enough water drops</string>
    <string name="key_step_count">stepCount</string>
    <string name="home_textview_text">water drops</string>
...
    <string name="redSeeds">Red Seeds</string>
    <string name="yellowSeeds">Yellow Seeds</string>
    <string name="alarm_on_toast">Alarm is On</string>
    <string name="alarm_off_toast">Alarm is Off</string>
    <string name="standUpAlert">Stand Up Alert</string>
    <string name="walkAround">You should stand up and walk around now!</string>
    <string name="notify_every_hour_to_stand_up_and_walk">Notify every hour to stand up and walk</string>
    <string name="set_up_repeating_alarm">Set up repeating alarm</string>
    <string name="set_time">Set time</string>
    <string name="rp_al_set_up">Regular alarm set up</string>
    <string name="rp_al_set_off">Regular Alarm set off</string>
    <string name="water_the_plant">Water the plant</string>
    <string name="price_water">500</string>

</resources>
